# browser-instrumentation-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/browser_instrumentation_mcp/: __init__.py  browser_manager.py  models.py  server.py  storage.py
src/browser_instrumentation_mcp/backends/: __init__.py  base.py  cdp_backend.py  playwright_backend.py
tests/: __init__.py  conftest.py  test_browser_manager.py  test_cdp_backend.py  test_models.py  test_playwright_backend.py  test_storage.py
